# swamp

./: .gitignore  Cargo.toml  LICENSE  README.md  dump.rdb
.github/workflows/: build.yml  release.yml
crates/analyzer/: Cargo.toml  README.md
crates/analyzer/src/: access.rs  attributes.rs  call.rs  constant.rs  context.rs  def.rs  err.rs  lib.rs  literal.rs  operator.rs  pattern.rs  prelude.rs  shared.rs  structure.rs  to_string.rs  types.rs  variable.rs
crates/analyzer/tests/: tests.rs
crates/ast/: Cargo.toml  README.md
crates/ast/src/: lib.rs  prelude.rs
crates/attributes/: Cargo.toml  README.md
crates/attributes/src/: lib.rs
crates/boot-game/: Cargo.toml
crates/boot-game/src/: lib.rs  prelude.rs
crates/code-gen/: Cargo.toml  README.md
crates/code-gen-program/: Cargo.toml
crates/code-gen-program/src/: lib.rs
crates/code-gen/src/: alloc.rs  alloc_util.rs  anon_struct.rs  assignment.rs  bin_op.rs  block.rs  call.rs  code_bld.rs  constants.rs  ctx.rs  disasm.rs  enum_variants.rs  equal.rs  err.rs  expr.rs  func.rs  guard.rs  host.rs  init.rs  initializer_list.rs  initializer_pair_list.rs  intr.rs  iter.rs  layout.rs  lib.rs  literal.rs  location.rs  logical.rs  lvalue.rs  map.rs  match_expr.rs  postfix.rs  prelude.rs  reg_pool.rs  relational.rs  rvalue.rs  rvalue_scalar.rs  slice.rs  slice_pair.rs  sparse.rs  (+10 more)
crates/code-gen/tests/: tests.rs
crates/compile/: Cargo.toml  README.md
crates/compile/src/: lib.rs  prelude.rs
crates/compile/tests/: analyze.rs  pattern_matching.rs  util.rs
crates/core/: Cargo.toml  README.md
crates/core-extra/: Cargo.toml
crates/core-extra/src/: cnv.rs  extra.rs  grid.rs  lib.rs  map2.rs  prelude.rs  qck_des.rs  value.rs
crates/core/assets/core-0.0.0/: lib.swamp
crates/core/src/: lib.rs  text.rs
crates/core/tests/: core.rs
crates/dep-loader/: Cargo.toml  README.md
crates/dep-loader/src/: lib.rs  prelude.rs
crates/err/: Cargo.toml  README.md
crates/err/src/: analyze.rs  dep.rs  lib.rs  loader.rs  parse.rs  prelude.rs  runtime.rs  script_resolve.rs  semantic.rs
crates/eval/: Cargo.toml  README.md
crates/eval/src/: err.rs  lib.rs
crates/examples/: Cargo.toml
crates/examples/examples/: single_texture.rs
crates/examples/src/: main.rs
crates/fentext/: Cargo.toml  README.md  output
crates/fentext-ui/: Cargo.toml  README.md
crates/fentext-ui/src/: lib.rs
crates/fentext/assets/crawler/: main.swamp
crates/fentext/scripts/: no_capture.sh  run.sh
crates/fentext/src/: main.rs
crates/font/: Cargo.toml
crates/font/src/: lib.rs
crates/fs-change-detector/: Cargo.toml  README.md
crates/fs-change-detector/src/: lib.rs
crates/game/: Cargo.toml
crates/game-assets/: Cargo.toml
crates/game-assets/src/: lib.rs
crates/game-audio/: Cargo.toml
crates/game-audio/src/: lib.rs
crates/game/src/: lib.rs  prelude.rs
crates/hashmap-mem/: Cargo.toml  README.md
crates/hashmap-mem/src/: lib.rs
crates/hashmap-mem/tests/: tests.rs
crates/hir/: Cargo.toml  README.md
crates/hir/src/: lib.rs  pretty.rs
crates/ir-shared/: Cargo.toml
crates/ir-shared/src/: lib.rs
crates/lexer/: Cargo.toml
crates/lexer/src/: lib.rs
crates/lexer/tests/: test.rs
crates/lir/: Cargo.toml  README.md
crates/lir/src/: lib.rs  pretty.rs
crates/lower-hir/: Cargo.toml  README.md
crates/lower-hir/src/: lib.rs
crates/lower-hir/tests/: test.rs
crates/lower-mir/: Cargo.toml
crates/lower-mir/src/: lib.rs
crates/lower-mir/tests/: test.rs
crates/lsp/: Cargo.toml
crates/lsp/scripts/: build.sh
crates/lsp/src/: conn.rs  log.rs  main.rs  srv.rs
crates/material/: Cargo.toml
crates/material/src/: lib.rs
crates/mir/: Cargo.toml  README.md
crates/mir/src/: lib.rs  pretty.rs
crates/modules/: Cargo.toml  README.md
crates/modules/src/: lib.rs  modules.rs  prelude.rs  symtbl.rs
crates/parser/: Cargo.toml  README.md
crates/parser-next/: Cargo.toml
crates/parser-next/src/: lib.rs
crates/parser-next/tests/: test.rs
crates/parser/src/: grammar.pest  lib.rs  prelude.rs
crates/parser/tests/: grammar.rs  util.rs
crates/pretty-print/: Cargo.toml  README.md
crates/pretty-print/src/: lib.rs
crates/pretty-print/tests/: tests.rs
crates/program-analyzer/: Cargo.toml  README.md
crates/program-analyzer/src/: lib.rs
crates/refs/: Cargo.toml
crates/refs/src/: lib.rs  prelude.rs
crates/render/: Cargo.toml
crates/render-wgpu/: Cargo.toml  README.md
crates/render-wgpu/src/: lib.rs  plugin.rs  prelude.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: err_wrt.rs  lib.rs  prelude.rs  print.rs  trace.rs
crates/semantic/: Cargo.toml  README.md
crates/semantic/src/: err.rs  instantiator.rs  intr.rs  lib.rs  prelude.rs  type_var_stack.rs
crates/sparse-mem/: Cargo.toml  README.md
crates/sparse-mem/src/: lib.rs
crates/sparse-mem/tests/: test.rs
crates/std/: Cargo.toml
crates/std/src/: lib.rs  pack.rs  print.rs
crates/swamp/: Cargo.toml  README.md
crates/swamp-build/: Cargo.toml
crates/swamp-build/src/: main.rs
crates/swamp-test/: Cargo.toml
crates/swamp-test/src/: main.rs
crates/swamp/docs/: rules.md
crates/swamp/examples/: run_battle.rs  (+1 more)
crates/symbol/: Cargo.toml
crates/test-runner/: Cargo.toml  LICENSE  README.md
crates/types/: Cargo.toml  README.md
crates/vm/: Cargo.toml
crates/vm-debug-info/: Cargo.toml  README.md
crates/vm-debug-types/: Cargo.toml
crates/vm-disasm/: Cargo.toml  README.md
crates/vm-host/: Cargo.toml
crates/vm-instr-build/: Cargo.toml
crates/vm-isa/: Cargo.toml
crates/vm-layout/: Cargo.toml  README.md
crates/vm-pretty-print/: Cargo.toml  README.md
crates/vm-test/: Cargo.toml
crates/vm-types/: Cargo.toml  README.md
crates/wgpu/: Cargo.toml  README.md
crates/wgpu-sprites/: Cargo.toml  README.md
crates/yini/: Cargo.toml
docs/: .markdownlint.json  core_principles.md
scripts/: RELEASE.md  benchmark_compiler_performance.sh  benchmark_profiles.sh  build_meteorite.sh  check_unpublished.sh  clippy.sh  concat_files.sh  dependency.sh  run_battle.sh  run_meteorite.sh  run_profiler.sh  run_tests.sh  run_very_basic.sh
(+140 files in other folders)
