[workspace]
resolver = "2"
members = [
    # Root orchestrator
    "crates/swamp",
    # Compile orchestrator
    "crates/compile",
    # Parser, AST
    "crates/ast",
    "crates/parser",
    # Analyzer, Semantic, ASG
    "crates/semantic",
    "crates/types",
    "crates/analyzer",
    # Dependency
    "crates/modules",
    "crates/dep-loader",
    "crates/program-analyzer",
    # Core
    "crates/core",
    "crates/core-extra",
    # Std
    "crates/std",
    # Error report
    "crates/err",
    # Debug
    "crates/pretty-print",
    # Code generator. Outputs VM instructions.
    "crates/code-gen",
    "crates/code-gen-program",
    # Runtime
    "crates/runtime",
    # Test runner
    "crates/test-runner",
    # VM, move to own repo in the far future
    "crates/vm",
    "crates/vm-test",
    "crates/vm-disasm",
    "crates/vm-types",
    "crates/vm-instr-build",
    "crates/vm-pretty-print",
    "crates/vm-debug-info",
    # Example Text Engine
    "crates/fentext",
    "crates/fentext-ui",
    "crates/fs-change-detector",
    "crates/lsp", "crates/swamp-test", "crates/swamp-build", "crates/swamp-run",
]
