[workspace]
resolver = "2"
members = [
    # Root orchestrator
    "crates/swamp",
    # Compile orchestrator
    "crates/compile",
    # Parser, AST
    "crates/lexer",
    "crates/parser-next",
    "crates/ast",
    "crates/parser",
    # Analyzer, Semantic, ASG
    "crates/attributes",
    "crates/semantic",
    "crates/types",
    "crates/analyzer",
    # Dependency
    "crates/modules",
    "crates/dep-loader",
    "crates/program-analyzer",
    # Core
    "crates/core",
    # Std
    "crates/std",
    # Error report
    "crates/err",
    # Debug
    "crates/pretty-print",
    # Code generator. Outputs VM instructions.
    "crates/code-gen",
    "crates/code-gen-program",
    # Runtime
    "crates/runtime",
    # Test runner
    "crates/test-runner",
    # VM, move to own repo in the far future
    "crates/vm",
    "crates/vm-test",
    "crates/vm-disasm",
    "crates/vm-types",
    "crates/vm-instr-build",
    "crates/vm-pretty-print",
    "crates/vm-debug-info",
    "crates/vm-layout",
    # Example Text Engine
    "crates/fentext",
    "crates/fentext-ui",
    # CLI
    "crates/swamp-test",
    "crates/swamp-build",
    "crates/lsp",
    # Should be moved to own repo in far future
    "crates/sparse-mem",
    "crates/hashmap-mem",
    "crates/fs-change-detector",
]
