[package]
name = "swamp-code-gen-program"
version = "0.1.16"
edition = "2024"
license = "MIT"
description = "converts a Swamp program to swamp-vm opcodes"
repository = "https://github.com/swamp/swamp"

[dependencies]

# Compilation
swamp-semantic = { path = "../semantic", version = "0.1.16" }
swamp-modules = { path = "../modules", version = "0.1.16" }
swamp-types = { path = "../types", version = "0.1.16" }

# REMOVE
swamp-compile = { path = "../compile", version = "0.1.16" } # TODO: Only needed for `Program` which should not be defined there.

# Code Generation
swamp-code-gen = { path = "../code-gen", version = "0.1.16" }
swamp-vm-disasm = { path = "../vm-disasm", version = "0.1.16" }

# Source Map
source-map-cache = "0.0.2"

tracing = "0.1.40"
seq-map = "0.0.13"
