[package]
name = "swamp-code-gen-program"
version = "0.2.14"
edition = "2024"
license = "MIT"
description = "converts a Swamp program to swamp-vm opcodes"
repository = "https://github.com/swamp/swamp"

[dependencies]

# Compilation
swamp-semantic = { path = "../semantic", version = "0.2.14" }


# REMOVE
swamp-compile = { path = "../compile", version = "0.2.14" } # TODO: Only needed for `Program` which should not be defined there.

# Code Generation
swamp-code-gen = { path = "../code-gen", version = "0.2.14" }
swamp-vm-types = { path = "../vm-types", version = "0.2.14" }

# Source Map
source-map-cache = "0.0.3"

time-dilation = "0.1.11"
