[package]
name = "swamp-code-gen"
version = "0.2.19"
edition = "2024"
license = "MIT"
description = "generates swamp-vm opcodes"
repository = "https://github.com/swamp/swamp"

[dependencies]
# Swamp VM
swamp-vm-types = { path = "../vm-types", version = "0.2.19" }
swamp-vm-instr-build = { path = "../vm-instr-build", version = "0.2.19" }
swamp-vm-disasm = { path = "../vm-disasm", version = "0.2.19" }
swamp-vm-debug-info = { path = "../vm-debug-info", version = "0.2.19" }

# Swamp Analyzer
swamp-semantic = { path = "../semantic", version = "0.2.19" }
swamp-types = { path = "../types", version = "0.2.19" }

# Layouter
swamp-vm-layout = { path = "../vm-layout", version = "0.2.19" }

# Attributes
swamp-attributes = { path = "../attributes", version = "0.2.19" }

# Source Map
source-map-node = "0.0.1"
source-map-cache = "0.0.6"

seq-map = "0.0.14"
tinter = "0.1.0"
tracing = "0.1.40"
