[package]
name = "swamp-core-extra"
version = "0.1.16"
edition = "2024"
license = "MIT"
repository = "https://github.com/swamp/swamp"
description = "Rust runtime implementations for Swamp core library collections (Vec, Map, Grid, Stack, etc.)."

[dependencies]
swamp-semantic = { path = "../semantic", version = "0.1.16" }
swamp-types = { path = "../types", version = "0.1.16" }
source-map-node = "0.0.1"

fixed32 = "0.0.17"
seq-map = "0.0.13"
sparse-slot = "0.0.4"

[dev-dependencies]
test-log = { version = "0.2.16", features = ["trace", "log", "color"] }
