[package]
name = "swamp-dep-loader"
version = "0.2.7"
edition = "2024"
license = "MIT"
repository = "https://github.com/swamp/swamp"
description = "Parses Swamp modules, scans for dependencies (`mod` and `use`), and determines the correct analysis order."

[dependencies]
swamp-ast = { path = "../ast", version = "0.2.7" }
swamp-parser = { path = "../parser", version = "0.2.7" }
source-map-cache = "0.0.3"

seq-map = "0.0.13"
time-dilation = "0.1.11"
dirs = "6.0.0"
tracing = "0.1.40"
