[package]
name = "swamp-dep-loader"
version = "0.2.17"
edition = "2024"
license = "MIT"
repository = "https://github.com/swamp/swamp"
description = "Parses Swamp modules, scans for dependencies (`mod` and `use`), and determines the correct analysis order."

[dependencies]
swamp-ast = { path = "../ast", version = "0.2.17" }
swamp-parser = { path = "../parser", version = "0.2.17" }
source-map-cache = "0.0.6"

seq-map = "0.0.14"
time-dilation = "0.1.11"
dirs = "6.0.0"
tracing = "0.1.40"
