[package]
name = "swamp-error-report"
version = "0.2.5"
edition = "2024"
license = "MIT"
description = "Swamp error report"
repository = "https://github.com/swamp/swamp"

[dependencies]
swamp-semantic = { path = "../semantic", version = "0.2.5" }
source-map-node = "0.0.1"
source-map-cache = "0.0.3"
swamp-dep-loader = { path = "../dep-loader", version = "0.2.5" }
swamp-program-analyzer = { path = "../program-analyzer", version = "0.2.5" }
swamp-parser = { path = "../parser", version = "0.2.5" }
eira = "0.1.10"
