[package]
name = "swamp-eval"
version = "0.1.16"
edition = "2024"
license = "MIT"
repository = "https://github.com/swamp/swamp"
description = "Simple tree-walking interpreter for executing the Swamp Abstract Semantic Graph (ASG) from `swamp-semantic`. Primarily for debugging/testing, not performance."

[dependencies]
# Semantic
swamp-semantic = { path = "../semantic", version = "0.1.16" }
swamp-types = { path = "../types", version = "0.1.16" }

# Runtime Implementation
swamp-core-extra = { path = "../core-extra", version = "0.1.16" }

# Source Map
source-map-node = "0.0.1"
source-map-cache = "0.0.2"

fixed32 = "0.0.17"
seq-map = "0.0.13"
squirrel-prng = "0.0.1"

[dev-dependencies]
test-log = { version = "0.2.16", features = ["trace", "log", "color"] }
