[package]
name = "fentext"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "text terminal game engine using Swamp"
repository = "https://github.com/swamp/swamp"

[dependencies]
fentext-ui = { path = "../fentext-ui", version = "0.1.0" }
swamp = { path = "../swamp", version = "0.1.16" }
swamp-std = { path = "../std", version = "0.1.10" }

fs-change-detector = { path = "../fs-change-detector", version = "0.1.0" }
pico-args = "0.5.0"

tracing = "0.1.40"
tracing-subscriber = { version = "0.3.1", features = [
    "registry",
    "env-filter",
] }
