[package]
name = "swamp-font"
version = "0.0.11"
edition = "2021"
repository = "https://github.com/swamp/swamp"
license = "MIT"
categories = ["game-development"]
description = "Font asset loading"

[dependencies]
bmf-parser = "0.0.1"
limnus = { path = "../../../limnus/crates/limnus", version = "0.0.10" }

tracing = "0.1.40"
int_math = "0.0.2"
