[package]
name = "swamp-game-audio"
version = "0.0.11"
edition = "2021"
repository = "https://github.com/swamp/swamp"
license = "MIT"
categories = ["game-development"]
description = "Game audio"

[dependencies]
limnus = { path = "../../../limnus/crates/limnus", version = "0.0.10", features = ["audio"] }


tracing = "0.1.40"
