[package]
name = "swamp-game"
version = "0.0.10"
edition = "2021"
repository = "https://github.com/swamp/swamp"
license = "MIT"
categories = ["game-development"]
description = "common swamp game types"


[dependencies]
tracing = "0.1.40"
int_math = "0.0.2"

swamp-render = { path = "../render", version = "0.0.10" }
swamp-render-wgpu = { path = "../render-wgpu", version = "0.0.10" }

monotonic-time-rs = "0.0.5"
swamp-font = { path = "../font", version = "0.0.10" }
swamp-wgpu-sprites = { path = "../wgpu-sprites", version = "0.0.10" }
limnus = { path = "../../../limnus/crates/limnus", version = "0.0.10" }

swamp-game-assets = { path = "../game-assets", version = "0.0.10" }
swamp-game-audio = { path = "../game-audio", version = "0.0.10" }

[dev-dependencies]
test-log = "0.2.16"
