[package]
name = "swamp-lsp"
version = "0.2.0"
edition = "2024"
documentation = "LSP Server for Swamp"
license = "MIT"
repository = "https://github.com/swamp/swamp"

[dependencies]
lsp-server = "0.7.8"
lsp-types = "0.97.0"
serde_json = "1.0.140"
walkdir = "2.5.0"
swamp = { path = "../swamp", version = "0.2.0" }
source-map-cache = "0.0.3"
seq-map = "0.0.13"
pico-args = "0.5.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.19"
