[package]
name = "swamp-modules"
version = "0.2.23"
edition = "2024"
license = "MIT"
repository = "https://github.com/swamp/swamp"
description = "Module support for Swamp"

[dependencies]
swamp-semantic = { path = "../semantic", version = "0.2.23" }
swamp-types = { path = "../types", version = "0.2.23" }
swamp-symbol = { path = "../symbol", version = "0.2.23" }
swamp-refs = { path = "../refs", version = "0.2.23" }
source-map-node = "0.0.1"

seq-map = "0.0.14"
tiny-ver = "0.1.2"
