[package]
name = "swamp-program-analyzer"
version = "0.2.7"
edition = "2024"
license = "MIT"
description = "Orchestrates the semantic analysis phase for a Swamp program, analyzing parsed modules in the correct dependency order using `swamp-analyzer`."
repository = "https://github.com/swamp/swamp"

[dependencies]
swamp-dep-loader = { path = "../dep-loader", version = "0.2.7" }
swamp-analyzer = { path = "../analyzer", version = "0.2.7" }
swamp-semantic = { path = "../semantic", version = "0.2.7" }
swamp-modules = { path = "../modules", version = "0.2.7" }

source-map-cache = "0.0.3"

time-dilation = "0.1.11"

tracing = "0.1.40"

[dev-dependencies]
