[package]
name = "swamp-program-analyzer"
version = "0.2.17"
edition = "2024"
license = "MIT"
description = "Orchestrates the semantic analysis phase for a Swamp program, analyzing parsed modules in the correct dependency order using `swamp-analyzer`."
repository = "https://github.com/swamp/swamp"

[dependencies]
swamp-dep-loader = { path = "../dep-loader", version = "0.2.17" }
swamp-analyzer = { path = "../analyzer", version = "0.2.17" }
swamp-semantic = { path = "../semantic", version = "0.2.17" }
swamp-modules = { path = "../modules", version = "0.2.17" }

source-map-cache = "0.0.4"

time-dilation = "0.1.11"

tracing = "0.1.40"

[dev-dependencies]
